WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309725
REGRESSION: Number inputs fail to display localized numbers
https://bugs.webkit.org/show_bug.cgi?id=309725
Summary
REGRESSION: Number inputs fail to display localized numbers
Lily Spiniolas
Reported
2026-03-11 15:41:44 PDT
rdar://172112320
Attachments
Add attachment
proposed patch, testcase, etc.
Lily Spiniolas
Comment 1
2026-03-11 15:57:43 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60403
EWS
Comment 2
2026-03-16 19:39:06 PDT
Committed
309366@main
(84c604759752): <
https://commits.webkit.org/309366@main
> Reviewed commits have been landed. Closing PR #60403 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug